llvm/test/CodeGen/MIR/AMDGPU/s_wait_alu-error-expected-prefix.mir
# RUN: not llc -mtriple=amdgcn -mcpu=gfx1200 -run-pass=none %s -o - 2>&1 | FileCheck %s

---
# CHECK: error: {{.*}}
name: MissingDotPrefix
body: |
  bb.0:
    S_WAITCNT_DEPCTR MissingDotPrefix
...
